--- a/online-book-shop/index.html
+++ b/online-book-shop/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="book_logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Online Book Shop</title>
   </head>
-  <body>
+  <body class="px-12">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
